# thesis

./: .gitignore  .gitmodules  bibliography.bib  bibliography2.bib  figures.py  presentation.org  thesis.org
code/spencer/: bof_approach.py  dataset.py  dtw-mahalanobis.py  gp-lmf.py  priors.py  results.txt  seq-bcgplvm.py  utils.py  visualization.py  visualiztion.py
code/spencer/ws/devel/: .catkin  .rosinstall  setup.sh
code/spencer/ws/devel/lib/pkgconfig/: activity_recognition.pc
code/spencer/ws/src/activity_recognition/: CMakeLists.txt  config.rviz  package.xml
code/spencer/ws/src/activity_recognition/resources/: kmeans.pkl  poses.pkl  samples.pkl  svm.pkl
code/spencer/ws/src/activity_recognition/scripts/: SparseBCGPLVM.py  bof_approach.py  dataset.py  gp-lmf.py  (+11 more)
code/spencer/ws/src/recognition_gui/: CMakeLists.txt  config.myviz  config.rviz  gui.py  myviz.py  package.xml  test.rviz
components/: abstract.tex  abstract_german.tex  cover.tex  disclaimer.tex  info.tex  titlepage.tex
figures/: bag-of-features-approach.eps  bag-of-features-approach.gv  bag-of-features-approach.ps  bag-of-features-approach.ps2  bof-approach.eps  bof-approach.graphml  bof-cm.eps  cm-bof-128.eps  cm-bof-partial.eps  cm-dtw-64.eps  cm-lcs-10.eps  cm-lcs-64.eps  discr-seq-approach.eps  discr-seq-approach.graphml  gp-1-1.eps  gp-lmf-approach.eps  gp-lmf-approach.graphml  gp-opt.eps  gplmf-flow-l5.eps  gplmf-flow.eps  gplmf-path.eps  gplmf-plain.eps  regression.eps  skeleton-frame.eps  skeleton-frame.ipe  support-vectors.eps  support-vectors.ipe  test.eps  univariate-gaussian.eps
(+5 files in other folders)
